Opening Blender file with relative path breaks internal relative paths. #86544

Closed
opened 2021-03-13 10:47:24 +01:00 by Peter Baintner · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error
Opening a Blender file from another folder with a relative path changes the relative paths to libraries so that there are too many "../" in the paths.

Opening without a relative path (how should look like): Opening with a relative path:
paths_before.jpg paths_after.jpg

Exact steps for others to reproduce the error
For easy recreation of the issue, I uploaded a zip file with a folder structure, an example file and a bat file to execute the .blend file with a relative path.
To start the test:

  • Extract the zip file
  • Edit the execute/launch_test.bat file to point to your blender.exe directory
  • launch execute/launch_test.bat

rel_path_test.zip

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** Opening a Blender file from another folder with a relative path changes the relative paths to libraries so that there are too many "../" in the paths. |Opening without a relative path (how should look like):|Opening with a relative path: | -- | -- | |![paths_before.jpg](https://archive.blender.org/developer/F9892786/paths_before.jpg)|![paths_after.jpg](https://archive.blender.org/developer/F9892789/paths_after.jpg) **Exact steps for others to reproduce the error** For easy recreation of the issue, I uploaded a zip file with a folder structure, an example file and a bat file to execute the .blend file with a relative path. To start the test: - Extract the zip file - Edit the `execute/launch_test.bat` file to point to your `blender.exe` directory - launch execute/launch_test.bat [rel_path_test.zip](https://archive.blender.org/developer/F9888789/rel_path_test.zip)
Author

Added subscriber: @PeterBaintner

Added subscriber: @PeterBaintner
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce

**System Information**
Operating system: Linux-5.10.19-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01
version: 2.93.0 Alpha, branch: master, commit date: 2021-03-15 12:31, hash: `rBab6e67767e73`, also checked 2.92 release
Cannot reproduce ``` **System Information** Operating system: Linux-5.10.19-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 version: 2.93.0 Alpha, branch: master, commit date: 2021-03-15 12:31, hash: `rBab6e67767e73`, also checked 2.92 release ```

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
Apparently the problem only happens on Windows.

I can confirm. Apparently the problem only happens on Windows.

Added subscriber: @rotoglup

Added subscriber: @rotoglup
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

This has been coming up during Sprite Fright a number of times, and am requesting bumping prio on this.
Animators would report files breaking after using Save As to save the file somewhere else, then reloading the file. The paths end up looking like this:
image.png

And after File->External Data->Find Missing Files, aka the correct paths, should be this:
image.png

So for our case it's actually a case of not enough "../", unlike in the report, but I can only assume it's the same issue.

I've had this reported by an animator in the past who was not working on Windows at the time, so I think it might not be windows-specific, but I certainly cannot reproduce on my Linux machine. I can test later on Windows too though, with the attached .bat file.

This has been coming up during Sprite Fright a number of times, and am requesting bumping prio on this. Animators would report files breaking after using Save As to save the file somewhere else, then reloading the file. The paths end up looking like this: ![image.png](https://archive.blender.org/developer/F10164357/image.png) And after File->External Data->Find Missing Files, aka the correct paths, should be this: ![image.png](https://archive.blender.org/developer/F10164355/image.png) So for our case it's actually a case of not enough "../", unlike in the report, but I can only assume it's the same issue. I've had this reported by an animator in the past who was not working on Windows at the time, so I think it might not be windows-specific, but I certainly cannot reproduce on my Linux machine. I can test later on Windows too though, with the attached .bat file.

Added subscriber: @Rikstopher

Added subscriber: @Rikstopher

This comment was removed by @Rikstopher

*This comment was removed by @Rikstopher*

Added subscriber: @fsiddi

Added subscriber: @fsiddi

Added subscriber: @mont29

Added subscriber: @mont29

@Mets this has nothing really to do with current report, which is a problem at opening a blend file with relative path from command line essentially...

Will fix that one, please make proper report for the issue that is 'super urgent'...

@Mets this has nothing really to do with current report, which is a problem at *opening* a blend file with relative path from command line essentially... Will fix that one, please make proper report for the issue that is 'super urgent'...

This issue was referenced by fbd889ec28

This issue was referenced by fbd889ec285a55872a274d72fdd0caba0a163cf7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-06-10 18:41:20 +02:00
Sign in to join this conversation.
9 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#86544
No description provided.